# growth-analytics-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
dashboard/: app.py  requirements.txt
dashboard/components/: charts.py  data.py  layout.py
dashboard/pages/: 1_Attribution_Comparison.py  2_Funnel_and_Cohort.py  3_Ask_The_Data.py
dbt_project/: dbt_project.yml  profiles.yml.example
dbt_project/macros/: attribution_helpers.sql
dbt_project/models/marts/: schema.yml
dbt_project/models/metrics/: attribution_metrics.yml  core_metrics.yml
dbt_project/models/semantic_models/: sem_attribution.yml  sem_conversions.yml  sem_funnel_cohort_spend.yml  sem_user_events.yml
dbt_project/models/staging/: sources.yml  stg_activations.sql  stg_ad_clicks.sql  stg_ad_impressions.sql  (+11 more)
dbt_project/seeds/: campaign_spend.csv  channel_hierarchy.csv
dbt_project/tests/: attribution_credit_sums_to_one.sql  no_signup_before_first_event.sql
docs/: attribution_methodology.md  data_model.md  dbt_transformations.md  metrics_catalog.md  nl_interface_design.md  streamlit_cloud_deploy.md
docs/dbt/: catalog.json  manifest.json
nl_interface/: README.md  __init__.py  agent.py  metricflow_tool.py
nl_interface/eval/: golden_questions.yml  run_eval.py
scripts/: backfill_bigquery.py
simulator/: README.md  __init__.py  config.yml  events.py  test_user_journey.py  user_journey.py
streaming/: README.md  __init__.py  identity_resolution.py  ingest_to_bigquery.py  run_spark.sh
streaming/schemas/: __init__.py  events.py
utils/: gcp_credentials.py
(+17 files in other folders)
