[project]
name = "growth-analytics-platform"
version = "0.1.0"
description = "Warehouse-first growth analytics platform for attribution, funnel/cohort analytics, and governed LLM-powered data discovery."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "pyspark",
  "confluent-kafka",
  "google-cloud-bigquery",
  "dbt-core",
  "dbt-bigquery",
  "dbt-metricflow",
  "openai",
  "streamlit",
  "pandas",
  "pydantic",
  "pyyaml",
  "python-dotenv",
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["simulator", "streaming", "nl_interface"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
